# coffee-classification

./: .gitignore  .pre-commit-config.yaml  CoffeeNet.py  CoffeeNet10.py  CoffeeNet12.py  CoffeeNet5.py  CoffeeNet6.py  Pipfile  README.md  __init__.py  augmentation.py  classify.py  cnn_simple3.py  cnn_simple4.py  configs.json  create_tfrecord.py  data_reader.py  dominant.py  export_model.py  label_map.json  labelmap.py  pyproject.toml  read_tfrecord.py  requeriments_dev.txt  requirements.txt  requirements_dev.txt  run_tests.py  segmentation.py  show_tfrecord.py  tests.py  to_lite.py  to_saved_model.py  tox.ini  train.py  tsne.py  utils.py  validate.py  visualize_features.py  visualize_tsne.py  visualize_weights.py
.github/: dependabot.yml
.github/workflows/: python-package.yml  tests.yml
data/: classification_valid_1.tfrecord  teste_dataset0.tfrecord  valid_dataset0.tfrecord
data/old/: teste_dataset1.tfrecord
docs/: training.md
images/: relabel.py
images/ardido/: 20190401_151518.json  20190401_151609.json  20190401_152804.json  20190401_152916.json  20190403_155651.json  20190403_155812.json  20201103_173021.json  20201103_180213.json  20210212_152042.json  20210212_152221.json  20210212_164728.json
images/brocado/: 20190401_155523.json  20190403_154929.json  20201103_173655.json  20201103_180648.json  20210212_152332.json  20210212_153008.json  20210212_154630.json  20210212_154655.json  20210212_164254.json
images/marinheiro/: 20190401_150054.json  20190401_150306.json  20190401_150452.json  20201103_172434.json  20210212_164512.json
images/normal/: 20190401_162712.json  20190401_162908.json  20201103_174144.json  20201103_175542.json  20210212_143432.json  20210212_144153.json  20210212_145213.json
images/preto/: 20190401_154601.json  20190401_154913.json  (+3 more)
src/: classify_images.py  classify_tfrecords.py  create_tfrecord.py  create_tfrecords.py  segment_images.py  segmentation.py  show_tfrecord.py  show_tfrecords.py  to_lite.py  to_saved_model.py  train.py  training.py
tests/: 20210212_164545.json  dataset.tfrecord  test.py  test_coffee.py
utils/: CoffeeNet.py  __init__.py  augmentation.py  config.py  data_augment.py  data_reader.py  labelmap.py  model.py  other.py  reload_model.py  tfrecords.py  utils.py  visualize.py
(+54 files in other folders)
