[tool.poetry]
name = "coffee-classification"
version = "0.1.0"
description = ""
authors = ["William <william1504@gmail.com>"]
packages = [
    { include = "coffee_classification", from = "src" },
    { include = "utils", from = "src/coffee_classification" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
opencv-python = "^4.5.4"
tensorflow = "^2.7.0"
matplotlib = "^3.5.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
tox = "^3.24.4"
pre-commit = "^2.16.0"

[tool.pytest.ini_options]
addopts = "--cov=coffee_classification"
filterwarnings = [
    "ignore::DeprecationWarning:flatbuffers.*:"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
