[tool.poetry]
name = "coffee-classification"
version = "0.1.0"
description = ""
authors = ["William <william1504@gmail.com>"]
packages = [
    { include = "coffee_classification", from = "src" },
    { include = "utils", from = "src/coffee_classification" },
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
opencv-python = "^4.5.4"
tensorflow = "^2.8.0"
matplotlib = "^3.5.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.18.1"

[tool.pytest.ini_options]
addopts = "--cov=coffee_classification"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
