[tool.poetry]
name = "coffee-classification"
version = "0.1.0"
description = ""
authors = ["William <william1504@gmail.com>"]
packages = [
    { include = "coffee_classification", from = "src" },
    { include = "utils", from = "src/coffee_classification" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
opencv-python = "^4.6.0"
tensorflow = "^2.11.0"
matplotlib = "^3.6.2"
install = "^1.3.5"
scikit-learn = "^1.1.3"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pre-commit = "^3.2.1"

[tool.pytest.ini_options]
addopts = "--cov=coffee_classification"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
